# telegram-speaker

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
launchagent/: com.telegram-speaker.plist.template
modules/: __init__.py  config.py  handlers.py  models.py  services.py  tts.py  utils.py
