[project]
name = "telegram-speaker"
version = "0.1.0"
description = "Telegram bot that plays voice messages on Google Home or macOS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "gtts>=2.5.4",
    "pychromecast>=14.0.9",
    "python-telegram-bot>=22.5",
    "pyyaml>=6.0.3",
    "soundfile>=0.13.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]
